add "function decorator enhance Strategy Pattern"
使用函数修饰器来改进Strategy 模式

--- a/fluent python/设计模式with first-class functions.ipynb
+++ b/fluent python/设计模式with first-class functions.ipynb
@@ -328,6 +328,142 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# 使用函数装饰器来改进Strategy模式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "promos = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def promotion(promo_func):\n",
+    "    promos.append(promo_func)\n",
+    "    return promo_func # 不修改被装饰函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "@promotion\n",
+    "def fidelity(order):\n",
+    "    return order.total() * .05 if order.customer.fidelity >= 1000 else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@promotion\n",
+    "def bulk_item(order):\n",
+    "    discount = 0\n",
+    "    for item in order.cart:\n",
+    "        if item.quantity >= 20:\n",
+    "            discount += item.total() * .1\n",
+    "    return discount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "@promotion\n",
+    "def large_order(order):\n",
+    "    distinct_items = {item.product for item in order.cart}\n",
+    "    if len(distinct_items) >= 10:\n",
+    "        return order.total() * .07 \n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def best_promo(order):\n",
+    "    return max(promo(order) for promo in promos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
